[package]
name = "hello-wasm"
version = "0.1.1"
edition = "2021"
authors = ["Mentor Kadriu <mentor.kadriu@gmail.com>"]
description = "A sample project with wasm-pack"
license = "MIT"
repository = "https://github.com/mentorkadriu/hello-wasm"

[lib]
crate-type = ["cdylib"]


[dependencies]
wasm-bindgen = "0.2"
